--- a/PhotoDrop/Settings.storyboard
+++ b/PhotoDrop/Settings.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,41 +22,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eua-st-Jch">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eua-st-Jch">
                                 <rect key="frame" x="16" y="28" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="vm1-1C-dbp" eventType="touchUpInside" id="2EB-IO-TzL"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bST-HJ-lUX">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bST-HJ-lUX">
                                 <rect key="frame" x="138" y="576" width="98" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save Changes"/>
                                 <connections>
                                     <action selector="saveChangesButtonTapped:" destination="vm1-1C-dbp" eventType="touchUpInside" id="Eab-99-uDW"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your new username here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eOg-QA-FWk">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your new username here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eOg-QA-FWk">
                                 <rect key="frame" x="16" y="318" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Change Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFU-Yf-op8">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Change Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFU-Yf-op8">
                                 <rect key="frame" x="115" y="289" width="143" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BhG-Xv-OvX">
+                                <rect key="frame" x="16" y="137" width="343" height="144"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="144" id="uaJ-h5-QnA"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="leading" secondItem="nym-HV-tYz" secondAttribute="leadingMargin" id="7LQ-QR-aBa"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="top" secondItem="nym-HV-tYz" secondAttribute="top" constant="137" id="J4z-iO-SNv"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="leading" secondItem="eOg-QA-FWk" secondAttribute="leading" id="PLL-Ge-8eG"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="centerX" secondItem="bST-HJ-lUX" secondAttribute="centerX" id="RXZ-nN-4Kb"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="trailing" secondItem="eOg-QA-FWk" secondAttribute="trailing" id="Vkm-lq-40p"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="leading" secondItem="eua-st-Jch" secondAttribute="leading" id="WmH-iT-rII"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="top" secondItem="eua-st-Jch" secondAttribute="bottom" constant="79" id="dUc-V4-OyS"/>
+                            <constraint firstItem="TFU-Yf-op8" firstAttribute="top" secondItem="BhG-Xv-OvX" secondAttribute="bottom" constant="8" symbolic="YES" id="gwi-7r-MeQ"/>
+                            <constraint firstItem="BhG-Xv-OvX" firstAttribute="trailing" secondItem="nym-HV-tYz" secondAttribute="trailingMargin" id="sXm-1y-uIP"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="changeUsernameTextField" destination="eOg-QA-FWk" id="As0-da-0PL"/>
+                        <outlet property="currentUsernameLabel" destination="BhG-Xv-OvX" id="GJg-jL-TjL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CeP-sH-vbk" userLabel="First Responder" sceneMemberID="firstResponder"/>
