--- a/PhotoDrop/Photo.storyboard
+++ b/PhotoDrop/Photo.storyboard
@@ -48,6 +48,9 @@
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <state key="normal" image="report-user"/>
+                                                        <connections>
+                                                            <action selector="blockUserButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="AXS-Qr-4fT"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -77,6 +80,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="diamond-inactive"/>
                                 <connections>
+                                    <action selector="dropLikeButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="qya-we-7ap"/>
                                     <action selector="gemItButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="Fqd-m7-kOH"/>
                                 </connections>
                             </button>
